--- a/borrow-from.html
+++ b/borrow-from.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/Proper Credit Logo - ICON.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/Delta Star Credit - Icon.png">
 
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -63,7 +63,7 @@
                   <div class="search__top d-flex justify-content-between align-items-center">
                      <div class="search__logo">
                         <a href="/">
-                           <img src="assets/img/logo/Proper Credit Logo - HORIZONTAL.png" alt="logo">
+                           <img src="assets/img/logo/Delta Star Credit - Horizontal Black.png" alt="logo">
                         </a>
                      </div>
                      <div class="search__close">
@@ -109,7 +109,7 @@
       <div class="tp-header">
          <div id="header-sticky" class="tp-header__wrapper-inner white-bg">
          <div class="tp-header__logo white-bg">
-            <a href="/"><img src="assets/img/logo/Proper Credit Logo - HORIZONTAL.png" alt=""></a>
+            <a href="/"><img src="assets/img/logo/Delta Star Credit - Horizontal Black.png" alt=""></a>
          </div>
             <div class="tp-header__main-header">
                <div class="tp-main-menu">
@@ -211,7 +211,7 @@
          <div class="row align-items-center">
             <div class="col-6">
                <div class="mobile__logo">
-                  <a href="/"><img src="assets/img/logo/Proper Credit Logo - HORIZONTAL.png" alt=""></a>
+                  <a href="/"><img src="assets/img/logo/Delta Star Credit - Horizontal Black.png" alt=""></a>
                </div>
             </div>
             <div class="col-6">
@@ -232,7 +232,7 @@
             </div>
             <div class="tpoffcanvas__logo">
                <a href="/">
-                  <a href="/"><img src="assets/img/logo/Proper Credit Logo - HORIZONTAL.png" alt=""></a>
+                  <a href="/"><img src="assets/img/logo/Delta Star Credit - Horizontal Black.png" alt=""></a>
                </a>
             </div>
              <div class="mobile-menu"></div>
@@ -415,7 +415,7 @@
                         <div class="footer__logo">
                            <div class="logo col-lg-6">
                               <a href="/">
-                                 <img src="assets/img/logo/Proper Credit Logo (White).png" alt="">
+                                 <a href="/"><img src="assets/img/logo/Delta Star Credit - Vertical White.png" alt=""></a>
                               </a>
                               
                            </div>
@@ -666,7 +666,7 @@
                            <span>
                               <i class="fa-sharp fa-solid fa-envelope"></i>
                            </span>
-                           <a href="mailto:hello@propercredit.com.my">hello@propercredit.com.my</a>
+                           <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
                         </li>
                         <li>
                            <span>
