update email link

--- a/contact.html
+++ b/contact.html
@@ -383,7 +383,7 @@
                         <i class="flaticon-email"></i>
                      </div>
                      <div class="contact__info-text">
-                        <h4>hello@deltastarcredit.com.my</h4>
+                        <h4>francis@deltastarcredit.com.my</h4>
                      </div>
                   </div>
                   <div class="contact__info-item d-flex align-items-start">
@@ -432,7 +432,7 @@
                         <i class="flaticon-email"></i>
                      </div>
                      <div class="contact__info-text">
-                        <h4>hello@deltastarcredit.com.my</h4>
+                        <h4>iris@deltastarcredit.com.my</h4>
                      </div>
                   </div>
                   <div class="contact__info-item d-flex align-items-start">
@@ -492,7 +492,7 @@
                         <i class="flaticon-email"></i>
                      </div>
                      <div class="contact__info-text">
-                        <h4>hello@deltastarcredit.com.my</h4>
+                        <h4>clement@deltastarcredit.com.my</h4>
                      </div>
                   </div>
                   <div class="contact__info-item d-flex align-items-start">
@@ -913,7 +913,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:francis@deltastarcredit.com.my">francis@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -931,6 +931,12 @@
                                  <i class="fa-sharp fa-solid fa-location-dot"></i>
                               </span>
                               <a href="https://g.co/kgs/kthvmuN">514, Lorong 10 & Jalan Rubber, 93400 Kuching, Sarawak</a>
+                           </li>
+                           <li>
+                              <span>
+                                 <i class="fa-sharp fa-solid fa-envelope"></i>
+                              </span>
+                              <a href="mailto:iris@deltastarcredit.com.my">iris@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -961,7 +967,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:clement@deltastarcredit.com.my">clement@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
