--- a/about.html
+++ b/about.html
@@ -823,7 +823,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:francis@deltastarcredit.com.my">francis@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -841,6 +841,12 @@
                                  <i class="fa-sharp fa-solid fa-location-dot"></i>
                               </span>
                               <a href="https://g.co/kgs/kthvmuN">514, Lorong 10 & Jalan Rubber, 93400 Kuching, Sarawak</a>
+                           </li>
+                           <li>
+                              <span>
+                                 <i class="fa-sharp fa-solid fa-envelope"></i>
+                              </span>
+                              <a href="mailto:iris@deltastarcredit.com.my">iris@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -871,7 +877,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:clement@deltastarcredit.com.my">clement@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
