--- a/apply-form.html
+++ b/apply-form.html
@@ -894,7 +894,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:francis@deltastarcredit.com.my">francis@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -915,6 +915,12 @@
                            </li>
                            <li>
                               <span>
+                                 <i class="fa-sharp fa-solid fa-envelope"></i>
+                              </span>
+                              <a href="mailto:iris@deltastarcredit.com.my">iris@deltastarcredit.com.my</a>
+                           </li>
+                           <li>
+                              <span>
                                  <i class="fa-sharp fa-solid fa-phone"></i>
                               </span>
                               <a href="https://wa.me/60162847443">0162847443 (WS)</a> <br>
@@ -929,6 +935,8 @@
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
                   <div class="footer__widget footer__widget-2 pb-30">
                      <!-- <h4 class="footer__widget-title footer__widget-title-2">Contact</h4> -->
+                     <div class="footer__widget footer__widget-2 pb-30">
+                     <!-- <h4 class="footer__widget-title footer__widget-title-2">Contact</h4> -->
                      <div class="footer__contact-info tp-footer__icon-space">
                         <h6 class="white-color text-bold">Bintulu Branch</h6>
                         <ul>
@@ -942,7 +950,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                               </span>
-                              <a href="mailto:hello@deltastarcredit.com.my">hello@deltastarcredit.com.my</a>
+                              <a href="mailto:clement@deltastarcredit.com.my">clement@deltastarcredit.com.my</a>
                            </li>
                            <li>
                               <span>
@@ -955,6 +963,7 @@
                         </ul>
                         
                      </div>
+                  </div>
                   </div>
                </div>
          </div>
