--- a/borrow-from.html
+++ b/borrow-from.html
@@ -754,7 +754,7 @@
                               <span>
                                  <i class="fa-sharp fa-solid fa-location-dot"></i>
                               </span>
-                              <a href="" target="_blank">1st Floor, Lot 4406, Original Lot 3806, Jalan Diwarta, Parkcity Commerce Square, 97000, Bintulu, Sarawak</a>
+                              <a href="https://maps.app.goo.gl/6MzgWbEMNramHowp7" target="_blank">1st Floor, Lot 4406, Original Lot 3806, Jalan Diwarta, Parkcity Commerce Square, 97000, Bintulu, Sarawak</a>
                            </li>
                            <li>
                               <span>
